--- a/index.html
+++ b/index.html
@@ -14,25 +14,39 @@
     <section id="settings-card" class="card">
       <h1>Scale Driller</h1>
 
-      <label for="level-select">Quiz Level</label>
-      <select id="level-select">
-        <option value="easy">Easy</option>
-        <option value="intermediate">Intermediate</option>
-        <option value="hard">Hard</option>
-      </select>
-
-      <div id="key-select-container">
-        <label for="key-select">Key</label>
-        <select id="key-select">
-          <!-- JS will populate this -->
+      <div class="setting-group">
+        <label for="level-select">Quiz Level</label>
+        <select id="level-select">
+          <option value="easy">Easy</option>
+          <option value="intermediate">Intermediate</option>
+          <option value="hard">Hard</option>
         </select>
       </div>
 
-      <label for="time-limit">Seconds per Question</label>
-      <input type="number" id="time-limit" min="1" max="60" value="10" />
+      <div id="key-select-container" class="setting-group">
+        <label for="key-select" style="display: block; width: 100%; text-align: left;">Key</label>
+        <select id="key-select"></select>
+      </div>
 
-      <label for="question-count">Number of Questions</label>
-      <input type="number" id="question-count" min="1" max="50" value="10" />
+      <div class="setting-group">
+        <label for="time-limit">Seconds per Question</label>
+        <select id="time-limit">
+          <option value="5">5</option>
+          <option value="10" selected>10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+        </select>
+      </div>
+
+      <div class="setting-group">
+        <label for="question-count">Number of Questions</label>
+        <select id="question-count">
+          <option value="10" selected>10</option>
+          <option value="50">50</option>
+          <option value="100">100</option>
+          <option value="200">200</option>
+        </select>
+      </div>
 
       <button id="start-btn">Start Quiz</button>
       <button id="toggle-chart">Show Scale Chart</button>
@@ -43,7 +57,8 @@
 
     <!-- Quiz Card -->
     <section id="quiz-card" class="card hidden">
-      <button id="close-quiz">❌</button>
+      <button id="close-quiz" style="position: absolute; top: 16px; left: 16px;">x</button>
+      <button id="help-btn" style="position: absolute; top: 16px; right: 16px;">?</button>
       <div id="quiz-question"></div>
       <div id="answer-buttons"></div>
       <div id="feedback" class="feedback"></div>
