--- a/index.html
+++ b/index.html
@@ -29,12 +29,26 @@
           <option value="easy">Easy</option>
           <option value="intermediate">Intermediate</option>
           <option value="hard">Hard</option>
+          <option value="degree-training">Degree Training</option>
         </select>
       </div>
 
       <div id="key-select-container" class="setting-group">
         <label for="key-select" style="display: block; width: 100%; text-align: left;">Key</label>
         <select id="key-select"></select>
+      </div>
+
+      <div id="degree-select-container" class="setting-group hidden">
+        <label for="degree-select">Select Degree</label>
+        <select id="degree-select">
+          <option value="1">1st</option>
+          <option value="2">2nd</option>
+          <option value="3">3rd</option>
+          <option value="4">4th</option>
+          <option value="5">5th</option>
+          <option value="6">6th</option>
+          <option value="7">7th</option>
+        </select>
       </div>
 
       <div class="setting-group">
@@ -98,6 +112,6 @@
     </section>
   </main>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
