--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="quiz-card" class="card hidden">
       <div id="quiz-header">
         <button id="close-quiz" class="close-btn" aria-label="Close Quiz">✖</button>
-        <button id="help-btn" style="background: transparent; color: yellow; font-size: 30px; border: none; cursor: pointer;">&#10068;</button>
+        <button id="help-btn" class="help-btn">?</button>
       </div>
       <div id="quiz-question"></div>
       <div id="answer-buttons"></div>
