--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
       <div id="piano-ui" class="instrument-ui hidden">
         <!-- Piano UI will be generated dynamically -->
       </div>
+      <div id="bass-ui" class="instrument-ui hidden">
+        <!-- Bass Guitar UI will be generated dynamically -->
+      </div>
       <div id="feedback" class="feedback"></div>
       <div id="inline-chart-container" class="hidden">
         <div id="inline-scale-chart"></div>
