--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
 </body>
+  <div id="orientation-hint" class="hidden">
+    📱 Rotate your device for a better experience!
+  </div>
+  <script src="script.js"></script>
 </html>
