last key is always white

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <main style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh;">
+  <main>
     <!-- Settings Card -->
     <section id="settings-card" class="card" role="region" aria-label="Settings">
       <h1 class="app-title">Scale Driller</h1>
