--- a/index.html
+++ b/index.html
@@ -126,11 +126,6 @@
     📱 Rotate your device for a better experience!
   </div>
 
-</script>
-
-  <!-- Version Info -->
-  <div id="version-info" style="position: absolute; bottom: 4px; right: 8px; font-size: 0.8em; opacity: 0.7;">
-    Scale Driller
-  </div>
+  <script src="script.js"></script>
 </body>
 </html>
