--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         </select>
       </div>
 
+      <!-- Difficulty Setting -->
+      <div class="setting-group">
+        <label for="difficulty-select">Difficulty: <span id="difficulty-label">4</span></label>
+        <input type="range" id="difficulty-select" min="1" max="8" value="4" step="1" />
+      </div>
+
       <!-- Instrument Input Icons -->
       <div class="setting-group" id="input-type-group">
         <div class="input-icons">
