--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
   <main>
     <!-- Settings Card -->
     <section id="settings-card" class="card" role="region" aria-label="Settings">
-      <h1 class="app-title">Scale Driller</h1>
-
-
+      <div class="topShade">
+        <div class="topShadeInner">
+        <h1 class="app-title">Scale Driller</h1>
+      </div>
+        </div>
+      
       <!-- Level Selection -->
       <div class="setting-group">
         <label for="level-select">Training Mode</label>
@@ -90,6 +93,8 @@
 
     <!-- Quiz Card -->
     <section id="quiz-card" class="card hidden" role="region" aria-label="Quiz">
+      <div class="topShade">
+      <div class="topShadeInner">
       <div id="quiz-header" class="setting-group">
         <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
           <button id="close-quiz" class="close-btn" aria-label="Close Quiz">✖</button>
@@ -98,6 +103,8 @@
         </div>
       </div>
       <div id="quiz-question"></div>
+      </div>
+        </div>
       <div id="keys-ui" class="instrument-ui hidden">
         <div id="custom-input-ui"></div>
         <div id="answer-buttons"></div>
@@ -112,8 +119,11 @@
 
     <!-- Results Card -->
     <section id="results-card" class="card hidden" role="region" aria-label="Results">
+      <div class="topShade">
+      <div class="topShadeInner">
       <h2>Quiz Complete!</h2>
-      <p id="score-summary"></p>
+      </div></div>
+        <p id="score-summary"></p>
       <button id="play-again">Try Again</button>
     </section>
   </main>
