--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
               <span class="hamburger-line"></span>
               <span class="hamburger-line"></span>
             </button>
-            <h1 class="app-title">Scale Driller</h1>
+            <div class="title-container">
+              <h1 class="app-title">Scale Driller</h1>
+              <div class="time-mode-indicator hidden" id="time-mode-indicator"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -79,16 +82,6 @@
             <option value="5">5th</option>
             <option value="6">6th</option>
             <option value="7">7th</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="card-section hidden" id="time-mode-container">
-        <div class="setting-group">
-          <select id="time-mode-select">
-            <option value="" disabled selected>Time Mode</option>
-            <option value="time-attack">Time Attack</option>
-            <option value="bpm-challenge">BPM Challenge</option>
           </select>
         </div>
       </div>
@@ -148,6 +141,12 @@
     
     <!-- Quiz Card -->
     <section id="quiz-card" class="card hidden" role="region" aria-label="Quiz">
+      <!-- Full Screen Timer Display -->
+      <div id="fullscreen-timer" class="fullscreen-timer hidden">
+        <div class="timer-number" id="timer-display">130</div>
+        <div class="timer-label" id="timer-label">BPM</div>
+      </div>
+      
       <div class="topShade">
       <div class="topShadeInner">
       <div id="quiz-header" class="setting-group">
@@ -198,8 +197,13 @@
       <div class="menu-close-area" id="menu-close">✖</div>
       <button class="menu-item" id="menu-about">About</button>
       <button class="menu-item" id="menu-help">Help</button>
-      <button class="menu-item" id="menu-settings">Settings</button>
-      <button class="menu-item" id="menu-time-mode">Time Mode</button>
+      <button class="menu-item dropdown-button" id="menu-time-mode">
+        Time Mode <span class="dropdown-arrow">▼</span>
+      </button>
+      <div class="submenu hidden" id="time-mode-submenu">
+        <button class="submenu-item" id="time-attack-option">Time Attack</button>
+        <button class="submenu-item" id="bpm-challenge-option">BPM Challenge</button>
+      </div>
       <button class="menu-item" id="menu-stats">Statistics</button>
     </div>
   </div>
