--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
           <img src="images/icon_piano.png" alt="Piano Icon" class="input-icon" data-type="piano" title="Piano" />
           <img src="images/icon_bass.png" alt="Bass Icon" class="input-icon" data-type="bass" title="Bass" />
           <img src="images/icon_guitar.png" alt="Guitar Icon" class="input-icon" data-type="guitar" title="Guitar" />
+          <div class="input-icon" data-type="midi" title="MIDI Input">🎹</div>
+          <div class="input-icon" data-type="audio" title="Audio Input">🎤</div>
         </div>
       </div>
     </div>
@@ -168,6 +170,32 @@
           </div>
           <div id="piano-ui" class="instrument-ui hidden"></div>
           <div id="bass-ui" class="instrument-ui hidden"></div>
+          <div id="midi-ui" class="instrument-ui hidden">
+            <div class="midi-status">
+              <div id="midi-connection-status">🎹 MIDI: Disconnected</div>
+              <div id="midi-device-list"></div>
+            </div>
+            <div class="midi-feedback">
+              <div id="midi-note-display">Play a note on your MIDI device</div>
+            </div>
+          </div>
+          <div id="audio-ui" class="instrument-ui hidden">
+            <div class="audio-status">
+              <div id="audio-connection-status">🎤 Audio: Disconnected</div>
+              <button id="audio-start-btn" class="audio-btn">Start Audio Input</button>
+            </div>
+            <div class="audio-controls">
+              <div class="audio-setting">
+                <label for="audio-sensitivity">Sensitivity:</label>
+                <input type="range" id="audio-sensitivity" min="0.1" max="1.0" step="0.1" value="0.5">
+                <span id="sensitivity-value">0.5</span>
+              </div>
+            </div>
+            <div class="audio-feedback">
+              <div id="audio-note-display">Play a note on your instrument</div>
+              <div id="audio-frequency-display">Frequency: --</div>
+            </div>
+          </div>
         </div>
         <div class="card-section">
           <div id="feedback" class="feedback"></div>
